UCSFD8-861 fixing the search box spacing

--- a/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
@@ -82,6 +82,8 @@ header .menu--main {
         vertical-align: middle;
         padding-bottom: 0;
         margin-right: 22px; // to offset icon to the right
+        margin-top: $hover-border-size / 2;
+        margin-bottom: $hover-border-size / 2;
 
         &:hover {
           background-image: url(/themes/custom/ucsf/assets/images/magnifier-hover.svg);
